airflow/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - airflow.adrz.dev
    secretName: my-airflow-tls
  rules:
  - host: airflow.adrz.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: airflow-1641421618
            port:
              number: 8080
